# ds-project-2025

./: .coveragerc  .gitignore  README.md  conftest.py  package-lock.json  pyproject.toml  ruff.toml  tasks.py
.github/workflows/: ci.yml
docs/: architecture.md
docs/design_plan/: distributing_work.typ  index.typ  main.typ  template.typ
docs/final_report/: main.typ  references.bib  template.typ
kafka-config/: server.properties
src/: README.md  client.py  config.py  error.py  install_kafka.py  logger_service.py  main.py  message_consumer_test.py  message_producer_test.py  message_service.py  message_test.py  sat.py
src/benchmark/: sat.py  sat_parallel.py
src/entities/: leader_state.py  log_entry.py  log_entry_factory.py  node.py  raft_log.py  sat_formula.py  second.py  server_address.py  task_queue.py
src/examples/: message.py  message_consumer.py  message_producer.py  message_test.py  pool.py
src/network/: client.py  consumer_group.py  message.py  message_consumer.py  message_consumer_factory.py  message_producer.py  message_service.py  topic.py
src/node-messaging/: README.md  node.py  pyproject.toml
src/node-messaging/kafka/: docker-compose.yml
src/raft/: candidate.py  leader.py  leader_state.py  log_entry.py  log_entry_factory.py  node.py  raft_config.py  raft_log.py  role.py  vote_receiver_service.py
src/roles/: candidate.py  follower.py  leader.py  role.py
src/services/: logger_service.py  message_service.py  ping_service.py  task_scheduler_service.py  worker_service.py
src/tests/: test_addition.py  test_log_entry.py  test_raft_log.py  (+1 more)
(+73 files in other folders)
