[project]
name = "node-messaging"
version = "0.1.0"
description = "Simple ordered messaging node over Kafka"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0",
    "invoke>=2.2.1",
    "ruff>=0.14.4",
]

[project.scripts]
node-messaging = "node:main"

[tool.ruff.lint.pylint]
max-statements = 50

